--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
     "vitest": "^0.28.4"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
